--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@slack/events-api": "^3.0.0",
     "@slack/web-api": "^6.1.0",
     "@zeit/ncc": "^0.22.3",
+    "dotenv": "^8.2.0",
     "random-item": "^4.0.0",
     "strip-ansi": "^7.0.0",
     "typescript": "^4.2.4"
