--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
     "strictNullChecks": true,                 /* Enable strict null checks. */
     "moduleResolution": "node",
     /* Additional Checks */
-    "noUnusedLocals": true,                   /* Report errors on unused locals. */
-    "noUnusedParameters": true,               /* Report errors on unused parameters. */
-    "noImplicitReturns": true,                /* Report error when not all code paths in function return a value. */
+    "noUnusedLocals": false,                   /* Report errors on unused locals. */
+    "noUnusedParameters": false,               /* Report errors on unused parameters. */
+    "noImplicitReturns": false,                /* Report error when not all code paths in function return a value. */
 
     /* Module Resolution Options */
     // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
